--- a/package.json
+++ b/package.json
@@ -20,9 +20,14 @@
     "@angular/platform-browser": "~13.0.0",
     "@angular/platform-browser-dynamic": "~13.0.0",
     "@angular/router": "~13.0.0",
+    "@fortawesome/fontawesome-free": "^6.0.0",
+    "@stripe/stripe-js": "^1.31.0",
     "bootstrap": "^5.1.3",
+    "chart.js": "^3.1.1",
+    "mdb-angular-ui-kit": "^2.2.0",
     "ng2-search-filter": "^0.5.1",
     "ngx-pagination": "^5.1.1",
+    "ngx-stripe": "^13.2.1",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
