--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "ngx-pagination": "^5.1.1",
     "ngx-stripe": "^13.2.1",
     "rxjs": "~7.4.0",
+    "stripe": "^9.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
