--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "chart.js": "^3.1.1",
     "mdb-angular-ui-kit": "^2.2.0",
     "ng2-search-filter": "^0.5.1",
+    "ngx-clipboard": "^15.1.0",
     "ngx-pagination": "^5.1.1",
     "ngx-stripe": "^13.2.1",
     "rxjs": "~7.4.0",
